// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`guidance > snapshots registered/apk 1`] = `
{
  "links": [
    {
      "label": "Check registration status",
      "url": "https://developer.android.com/developer-verification/guides/check-registration-status",
    },
    {
      "label": "Android developer verification overview",
      "url": "https://developer.android.com/developer-verification",
    },
  ],
  "steps": [
    "Compare AA:BB with the certificate fingerprint used by this build.",
    "Re-check the package and certificate pair when the signing key changes.",
    "Use the Android developer verification guides to review package and key registration details.",
  ],
  "summary": "The checked signing key is registered for com.example.test.",
  "title": "Package registered for the checked signing key",
}
`;

exports[`guidance > snapshots registered/fdroid 1`] = `
{
  "links": [
    {
      "label": "Check registration status",
      "url": "https://developer.android.com/developer-verification/guides/check-registration-status",
    },
    {
      "label": "Android developer verification overview",
      "url": "https://developer.android.com/developer-verification",
    },
  ],
  "steps": [
    "Compare AA:BB with the certificate fingerprint of the F-Droid build you checked.",
    "If F-Droid signs the distributed APK with its own key, register that signing key for the package as well.",
    "Re-check the package and certificate pair when the signing key changes.",
    "Use the Android developer verification guides to review package and key registration details.",
  ],
  "summary": "The checked signing key is registered for com.example.test; for an F-Droid APK, confirm that the distributed build uses the same registered key.",
  "title": "Package registered for the checked signing key",
}
`;

exports[`guidance > snapshots registered_other_key/apk 1`] = `
{
  "links": [
    {
      "label": "Check registration status",
      "url": "https://developer.android.com/developer-verification/guides/check-registration-status",
    },
    {
      "label": "Open-source app registration guide",
      "url": "https://developer.android.com/developer-verification/guides/open-source-app-registration",
    },
    {
      "label": "Android developer verification FAQ",
      "url": "https://developer.android.com/developer-verification/guides/faq",
    },
  ],
  "steps": [
    "Compare the checked certificate fingerprint AA:BB with the signing keys registered for com.example.test.",
    "Confirm which developer and which distribution channel use each registered signing key; the package may be associated with a different developer.",
    "If this signing key should be covered, follow the official registration guidance to add and verify the key.",
  ],
  "summary": "The package com.example.test is registered, but not for the signing key checked in this build.",
  "title": "Package registered with another signing key",
}
`;

exports[`guidance > snapshots registered_other_key/fdroid 1`] = `
{
  "links": [
    {
      "label": "Check registration status",
      "url": "https://developer.android.com/developer-verification/guides/check-registration-status",
    },
    {
      "label": "Open-source app registration guide",
      "url": "https://developer.android.com/developer-verification/guides/open-source-app-registration",
    },
    {
      "label": "Android developer verification FAQ",
      "url": "https://developer.android.com/developer-verification/guides/faq",
    },
  ],
  "steps": [
    "Compare the checked certificate fingerprint AA:BB with the signing keys registered for com.example.test.",
    "Confirm which developer and which distribution channel use each registered signing key; the package may be associated with a different developer.",
    "If this signing key should be covered, follow the official registration guidance to add and verify the key.",
  ],
  "summary": "The package com.example.test is registered, but not for the signing key checked in this F-Droid build.",
  "title": "Package registered with another signing key",
}
`;

exports[`guidance > snapshots not_registered/apk 1`] = `
{
  "links": [
    {
      "label": "Check registration status",
      "url": "https://developer.android.com/developer-verification/guides/check-registration-status",
    },
    {
      "label": "Open-source app registration guide",
      "url": "https://developer.android.com/developer-verification/guides/open-source-app-registration",
    },
    {
      "label": "Limited distribution guide",
      "url": "https://developer.android.com/developer-verification/guides/limited-distribution",
    },
    {
      "label": "Full distribution guide",
      "url": "https://developer.android.com/developer-verification/guides/full-distribution",
    },
  ],
  "steps": [
    "Register com.example.test with the signing key used by this build.",
    "Re-run the registration status check after the package and signing key are updated.",
  ],
  "summary": "The signing key checked for com.example.test is not registered for that package.",
  "title": "Package not registered for the checked signing key",
}
`;

exports[`guidance > snapshots not_registered/fdroid 1`] = `
{
  "links": [
    {
      "label": "Check registration status",
      "url": "https://developer.android.com/developer-verification/guides/check-registration-status",
    },
    {
      "label": "Open-source app registration guide",
      "url": "https://developer.android.com/developer-verification/guides/open-source-app-registration",
    },
    {
      "label": "Limited distribution guide",
      "url": "https://developer.android.com/developer-verification/guides/limited-distribution",
    },
    {
      "label": "Full distribution guide",
      "url": "https://developer.android.com/developer-verification/guides/full-distribution",
    },
  ],
  "steps": [
    "Confirm the certificate used by the distributed F-Droid APK, then register that signing key for com.example.test when appropriate.",
    "Where practical, work toward a reproducible distribution build so the published APK can carry the developer's own signing key.",
    "Re-run the registration status check after the package and signing key are updated.",
  ],
  "summary": "The F-Droid APK for com.example.test is not registered for the signing key checked.",
  "title": "Package not registered for the checked signing key",
}
`;

exports[`guidance > snapshots unknown/apk 1`] = `
{
  "links": [
    {
      "label": "Check registration status",
      "url": "https://developer.android.com/developer-verification/guides/check-registration-status",
    },
    {
      "label": "Android developer verification overview",
      "url": "https://developer.android.com/developer-verification",
    },
    {
      "label": "Android developer verification FAQ",
      "url": "https://developer.android.com/developer-verification/guides/faq",
    },
  ],
  "steps": [
    "Retry the status check and confirm the package name and certificate fingerprint are correct.",
    "Inspect the signing certificate from the exact APK build you intend to distribute.",
    "Review the official Android developer verification documentation for current registration requirements.",
  ],
  "summary": "The registration state for com.example.test could not be determined for the checked signing key.",
  "title": "Registration status could not be determined",
}
`;

exports[`guidance > snapshots unknown/fdroid 1`] = `
{
  "links": [
    {
      "label": "Check registration status",
      "url": "https://developer.android.com/developer-verification/guides/check-registration-status",
    },
    {
      "label": "Android developer verification overview",
      "url": "https://developer.android.com/developer-verification",
    },
    {
      "label": "Android developer verification FAQ",
      "url": "https://developer.android.com/developer-verification/guides/faq",
    },
  ],
  "steps": [
    "Retry the status check and confirm the package name and certificate fingerprint are correct.",
    "Inspect the signing certificate from the exact APK build you intend to distribute.",
    "Review the official Android developer verification documentation for current registration requirements.",
  ],
  "summary": "The registration state for the checked F-Droid build of com.example.test could not be determined.",
  "title": "Registration status could not be determined",
}
`;
